--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -16,8 +16,8 @@
 -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="com.noshufou.android.su"
-      android:versionCode="46"
-      android:versionName="3.1.3">
+      android:versionCode="47"
+      android:versionName="3.1.4">
 
     <uses-permission android:name="com.noshufou.android.su.RESPOND" />
     <uses-permission android:name="com.noshufou.android.su.provider.READ" />
@@ -54,8 +54,7 @@
     <application android:label="@string/app_name"
         android:icon="@drawable/icon"
         android:logo="@drawable/ic_logo"
-        android:hardwareAccelerated="true"
-        android:debuggable="true">
+        android:hardwareAccelerated="true">
         <activity android:name="HomeActivity"
             android:label="@string/app_name"
             android:theme="@style/Theme.Superuser"
